# ncu_paper_writer

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  build-slides.ps1  build-slides.sh  build.ps1  build.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  format_question.md
.github/workflows/: build-test.yml  build.yml  docker-images.yml  lint.yml  release.yml
docker/: README.md  paper.Dockerfile  slides.Dockerfile
docs/: 01-installation.md  02-writing-workflow.md  03-zotero-setup.md  04-pandoc-syntax.md  05-troubleshooting.md  06-customization.md
examples/full/: paper.md
examples/minimal/: paper.md  references.bib
examples/slides-minimal/: slides.md
my-test-thesis/: paper.md
profiles/: README.md
profiles/slides-ccu/: profile.yaml  theme.css
profiles/slides-ccu/skeleton/: CLAUDE.md  Makefile  slides.md  theme.css
profiles/slides-ccu/skill/: SKILL.md
profiles/slides-ncu/: profile.yaml
profiles/slides-ncu/skeleton/: CLAUDE.md  Makefile  theme.css
profiles/slides-ncu/skill/: SKILL.md
profiles/thesis-ccu/: profile.yaml  template.latex
profiles/thesis-ccu/skeleton/: CLAUDE.md  paper.md
profiles/thesis-ccu/skill/: SKILL.md
profiles/thesis-ncu/: profile.yaml  template.latex
profiles/thesis-ncu/skeleton/: CLAUDE.md  paper.md
scripts/: build-slides.ps1  build-slides.sh  build.ps1  build.sh  check-env.ps1  check-env.sh  check-fonts.py  install-marp.ps1  install-marp.sh  install-skill.ps1  install-skill.sh  install.ps1  install.sh
scripts/examples/: gen_backbone_scatter.py
skill/ncu-paper-writer/: SKILL.md
skill/ncu-slides-writer/: SKILL.md
template/: CLAUDE.md  paper.md  references.bib
template-slides/: CLAUDE.md  Makefile  slides.md  theme.css
templates/marp/: ncu.css
