[project]
name = "paperforge"
version = "0.1.0"
description = "PaperForge：用 Markdown + Pandoc + XeLaTeX 鍛造格式精準的論文／報告 PDF，附 Marp 簡報工作流。內建 NCU 學位論文 profile。"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "PaperForge Contributors" }
]
keywords = ["pandoc", "latex", "thesis", "report", "ncu", "markdown", "zotero", "marp", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Traditional)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
    "fonttools>=4.50.0",
]

[project.optional-dependencies]
plotting = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "adjustText>=1.0.0",
]
watch = [
    "watchdog>=4.0.0",
]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/kevin00156/paperforge"
Documentation = "https://github.com/kevin00156/paperforge/tree/main/docs"
Repository = "https://github.com/kevin00156/paperforge"
Issues = "https://github.com/kevin00156/paperforge/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "RET", "SIM"]
ignore = ["E501"]
